<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_1"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:title="Edit Client"
        app:titleTextColor="@android:color/white"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />



    <EditText
        android:id="@+id/first_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:hint="@string/first_name_edit" />

    <EditText
        android:id="@+id/last_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:hint="@string/last_name_edit" />

    <EditText
        android:id="@+id/company_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:hint="@string/company_edit" />


    <EditText
        android:id="@+id/email_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email" />

    <EditText
        android:id="@+id/phone_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/phone_edit" />

    <EditText
        android:id="@+id/street_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/street_edit" />

    <EditText
        android:id="@+id/city_edit"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:hint="@string/city_edit" />

</LinearLayout>