<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_service"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:title="@string/service_add"
        app:titleTextColor="@android:color/white"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

    <ImageView
        android:id="@+id/service_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:background="@drawable/dotted_square"
        android:gravity="center"
        android:hint="@string/add_client_text"
        android:textAppearance="?android:textAppearanceMedium" />

    <EditText
        android:id="@+id/service_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/virtical_padding"
        android:hint="@string/service_name" />

    <EditText
        android:id="@+id/service_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:hint="@string/service_price"
        android:inputType="numberDecimal"
        android:paddingBottom="@dimen/virtical_padding" />

    <EditText
        android:id="@+id/service_plus_profit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:hint="@string/service_plus_profit"
        android:inputType="numberDecimal"
        android:paddingBottom="@dimen/virtical_padding" />

    <EditText
        android:id="@+id/service_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:inputType="text"
        android:hint="@string/service_notes" />

</LinearLayout>