<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_1"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:title="@string/clients_add"
        app:titleTextColor="@android:color/white"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />



    <EditText
        android:id="@+id/client_add"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:gravity="center"
        android:inputType="textCapSentences"
        android:hint="@string/add_client_text" />


    <EditText
        android:id="@+id/issue_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:hint="@string/issue_date_text" />


    <EditText
        android:id="@+id/due_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:hint="@string/due_date_text" />

    <EditText
        android:id="@+id/services_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/services_text" />


</LinearLayout>