<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/client_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_service_view"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:title="View Service"
        app:titleTextColor="@android:color/white" />

    <ImageView
        android:id="@+id/service_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:background="@drawable/dotted_square"
        android:gravity="center"
        android:hint="@string/add_client_text"
        android:textAppearance="?android:textAppearanceMedium" />


    <TextView
        android:id="@+id/service_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:paddingStart="@dimen/horizontal_padding"
        android:paddingLeft="@dimen/horizontal_padding"
        android:paddingBottom="@dimen/virtical_padding"
        android:textAppearance="?android:attr/textAppearanceLarge"
        tools:text="Service: " />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/service_price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:paddingStart="@dimen/horizontal_padding"
            android:paddingLeft="@dimen/horizontal_padding"
            android:paddingBottom="@dimen/virtical_padding"
            android:text="@string/service_view_price"
            android:textAppearance="?android:attr/textAppearanceLarge" />


            android:paddingStart="@dimen/horizontal_padding"
            android:paddingLeft="@dimen/horizontal_padding"
            android:paddingBottom="@dimen/virtical_padding"
            android:text="@string/service_view_profit_rate"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>



    <TextView
        android:id="@+id/service_plus_profit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:paddingStart="@dimen/horizontal_padding"
        android:paddingLeft="@dimen/horizontal_padding"
        android:paddingBottom="@dimen/virtical_padding"
        android:text="@string/service_view_plus_profit"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/service_price_IQ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:paddingStart="@dimen/horizontal_padding"
        android:paddingLeft="@dimen/horizontal_padding"
        android:paddingBottom="@dimen/virtical_padding"
        android:text="@string/service_view_price_IQ"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/service_notes_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/horizontal_padding"
        android:paddingLeft="@dimen/horizontal_padding"
        android:paddingBottom="@dimen/virtical_padding"
        android:text="Notes: "
        android:textAppearance="?android:attr/textAppearanceLarge" />


</LinearLayout>
